3 files modified, 1 added

--- a/src/app/components/lista/lista.component.html
+++ b/src/app/components/lista/lista.component.html
@@ -6,7 +6,7 @@
     <li id="lista-devs" *ngFor="let dev of devs">
       <span class="id">{{dev.id}}</span>
       <label id="descricao">
-        {{dev.name}}, {{dev.age}} anos, adora {{dev.techs}}, mora em {{dev.city}}
+        {{dev.nome}}, {{dev.idade}} anos, adora {{dev.linguagem}}, mora em {{dev.cidade}}
       </label>
       <div>
         <button id="atualizar" >Atualizar</button>
