--- a/src/app/components/cabecalho/cabecalho.component.html
+++ b/src/app/components/cabecalho/cabecalho.component.html
@@ -2,8 +2,8 @@
     <div class="opcoes">
       <strong id="titulo">Devs UFC</strong>
       <nav id="navegacao" >
-        <a>Lista de Devs</a>
-        <a>Novo Dev</a>
+        <a routerLink="/lista">Lista de Devs</a>
+        <a routerLink="/adicionar">Novo Dev</a>
       </nav> 
   </div>
 </header>
